# stackit-audit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  audit-config.example.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: vibers.yml
docs/: architecture.md
sample/: sample-findings.json
stackit_audit/: __init__.py  __main__.py
stackit_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stackit_audit/api_client/: __init__.py  audit_log.py  authorization.py  base.py  dbflex.py  dns.py  endpoints.py  iaas.py  load_balancer.py  object_storage.py  observability.py  resource_manager.py  secrets_manager.py  service_account.py  ske.py
stackit_audit/auth/: __init__.py  key_flow.py
stackit_audit/checks/: __init__.py  base.py  crypto_checks.py  db_checks.py  engine.py  iam_checks.py  k8s_checks.py  logging_checks.py  manual_checks.py  network_checks.py  secret_checks.py
stackit_audit/cli/: main.py
stackit_audit/config/: __init__.py  loader.py  schema.py
stackit_audit/discovery/: __init__.py  orchestrator.py
stackit_audit/frameworks/: eol_versions.yaml  manual_controls.yaml  mapping.py
stackit_audit/models/: __init__.py  check.py  finding.py  resource.py
stackit_audit/normalization/: __init__.py  resources.py
stackit_audit/pdf_rendering/: __init__.py  pdf_builder.py  sections.py  styles.py
stackit_audit/reporting/: __init__.py  json_writer.py  markdown_writer.py
tests/: conftest.py  test_arch_fixes.py  test_redact.py  test_scoring.py
(+12 files in other folders)
